--- a/app/src/main/res/xml/shortcuts.xml
+++ b/app/src/main/res/xml/shortcuts.xml
@@ -3,10 +3,9 @@
     <shortcut
         android:shortcutId="it.niedermann.owncloud.notes"
         android:enabled="true"
-        android:icon="@drawable/ic_action_new_dark"
+        android:icon="@drawable/ic_action_new_theme"
         android:shortcutShortLabel="@string/action_create"
-        android:shortcutLongLabel="@string/shortcut_create_long"
-        android:shortcutDisabledMessage="@string/shortcut_create_disabled">
+        android:shortcutLongLabel="@string/shortcut_create_long">
         <intent
             android:action="android.intent.action.VIEW"
             android:targetPackage="it.niedermann.owncloud.notes"
