Center permanent notification checkbox vertically

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -62,6 +62,7 @@
         android:id="@+id/settings_submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10pt"
         android:shadowColor="@color/fg_default_low"
         android:text="@string/settings_submit" />
 
@@ -69,8 +70,7 @@
         android:id="@+id/settings_notification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/settings_notification"
-        android:key="notificationCheckbox"
         android:defaultValue="false"
-        android:paddingTop="10pt"/>
+        android:key="notificationCheckbox"
+        android:text="@string/settings_notification" />
 </LinearLayout>
