--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,15 @@
         <item name="android:windowBackground">@color/bg_normal</item>
     </style>
 
+    <!--
+        cert4android is using these styles and we want the same button style in the trust activity
+    -->
+    <style name="Widget.AppCompat.Button.Borderless" parent="ocbutton">
+        <item name="android:layout_margin">2dp</item>
+    </style>
+    <style name="Widget.AppCompat.Button.Borderless.Colored" parent="Widget.AppCompat.Button.Borderless">
+    </style>
+
     <style name="fab">
         <item name="android:layout_margin">16dp</item>
         <item name="android:layout_width">wrap_content</item>
