#206 Implement splash screen (#211)
Fix #206 Implement splash screen

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,4 +37,8 @@
         <item name="android:padding">@dimen/button_padding</item>
         <item name="android:elevation">@dimen/button_elevation</item>
     </style>
+
+    <style name="SplashTheme" parent="OwnCloud">
+        <item name="android:windowBackground">@drawable/splashscreen</item>
+    </style>
 </resources>
