--- a/app/src/main/res/layout/activity_single_note.xml
+++ b/app/src/main/res/layout/activity_single_note.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/editContentContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="it.niedermann.owncloud.notes.android.activity.CreateNoteActivity">
+
 
     <ScrollView
         android:layout_width="match_parent"
@@ -19,10 +22,5 @@
             android:textIsSelectable="true" />
     </ScrollView>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_edit"
-        style="@style/fab"
-        android:src="@drawable/ic_action_edit"
-        app:backgroundTint="@color/primary"
-        app:rippleColor="@color/primary_dark" />
-</merge>
+
+</LinearLayout>
