Create Note Widget Addition of "Create Note" widget as referenced in https://github.com/stefan-niedermann/nextcloud-notes/issues/15.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="button_padding">16dp</dimen>
     <dimen name="button_elevation">5dp</dimen>
 
+    <dimen name="widget_margin">0dp</dimen>
 </resources>
