--- a/app/src/main/res/layout/widget_single_note.xml
+++ b/app/src/main/res/layout/widget_single_note.xml
@@ -3,8 +3,9 @@
     android:id="@+id/single_note"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
+    android:orientation="vertical"
+    android:background="@drawable/widget_background"
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/single_note_content"
@@ -12,11 +13,17 @@
         android:padding="10dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@color/fg_default"
+        android:textSize="14sp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
-
          />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_launcher"
+        android:layout_gravity="right|top"/>
+
 </FrameLayout>
 
 
