--- a/app/src/main/res/layout/widget_single_note.xml
+++ b/app/src/main/res/layout/widget_single_note.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/single_note"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/widget_background"
-    android:padding="10dp">
+    android:padding="8dp"
+    >
 
     <TextView
         android:id="@+id/single_note_content"
-        android:background="@color/bg_normal"
-        android:padding="10dp"
+        android:padding="0dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@color/fg_default"
-        android:textSize="14sp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="0dp"
          />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/ic_launcher"
-        android:layout_gravity="right|top"/>
+        android:padding="0dp"
+        android:layout_margin="0dp"
+        />
 
-</FrameLayout>
+</RelativeLayout>
 
 
 <!--
