--- a/app/src/main/res/xml/single_note_widget_provider_info.xml
+++ b/app/src/main/res/xml/single_note_widget_provider_info.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:configure="it.niedermann.owncloud.notes.android.activity.SelectSingleNoteActivity"
+    android:configure="it.niedermann.owncloud.notes.android.activity.TestActivity"
     android:initialLayout="@layout/widget_single_note"
     android:minHeight="110dp"
     android:minWidth="180dp"
