--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,17 +10,14 @@
         <!-- Snackbar Action Link -->
         <item name="colorAccent">@color/primary</item>
         <item name="android:buttonStyle">@style/ocbutton</item>
-        <item name="android:windowBackground">@color/bg_normal</item>
+        <item name="android:windowTitleBackgroundStyle">@color/bg_normal</item>
     </style>
 
-    <style name="SelectSingleNote" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
-        <item name="android:windowTitleBackgroundStyle">@color/bg_highlighted</item>
+    <style name="SelectSingleNote">
+        <item name="android:colorPrimary">@color/bg_highlighted</item>
 
     </style>
 
-    <style name="WindowTitleBackground">
-        <item name="android:background">@color/bg_highlighted</item>
-    </style>
     <!--
         cert4android is using these styles and we want the same button style in the trust activity
     -->
