--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <!-- Colors -->
 
-    <color name="primary">#0082C9</color>
+    <color name="primary">#0082c9</color>
     <color name="primary_dark">#286090</color>
 
     <color name="separator">#d2d2d2</color>
