--- a/app/src/main/res/layout/widget_single_note_new.xml
+++ b/app/src/main/res/layout/widget_single_note_new.xml
@@ -3,23 +3,30 @@
     android:id="@+id/single_note"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/widget_background"
-    android:padding="6dp"
+    android:background="@drawable/widget_background_new"
+    android:padding="0dp"
     android:clickable="true"
     >
 
     <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/primary"
+        android:text="Note header"
+        android:textColor="@color/fg_contrast"
+        android:textStyle="bold"
+        android:padding="8dp"/>
+
+    <TextView
         android:id="@+id/single_note_content"
-        android:padding="0dp"
+        android:padding="4dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@color/fg_default"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="4dp"
-        android:layout_marginLeft="6dp"
-        android:layout_marginRight="6dp"
-        android:layout_marginBottom="6dp"
+        android:layout_margin="4dp"
          />
+
 </RelativeLayout>
 <!--
  <com.yydcdut.rxmarkdown.RxMDTextView
