--- a/app/src/main/res/xml/single_note_widget_provider_info.xml
+++ b/app/src/main/res/xml/single_note_widget_provider_info.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:configure="it.niedermann.owncloud.notes.android.activity.TestActivity"
+    android:configure="it.niedermann.owncloud.notes.android.activity.SelectSingleNoteActivity"
     android:initialLayout="@layout/widget_single_note"
     android:minHeight="110dp"
     android:minWidth="180dp"
     android:minResizeHeight="80dp"
     android:minResizeWidth="80dp"
-    android:previewImage="@drawable/single_note_widget"
+    android:previewImage="@drawable/single_note_widget2"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="86400000"
     android:widgetCategory="keyguard|home_screen" />
