--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,25 +13,12 @@
         <item name="android:windowTitleBackgroundStyle">@color/bg_normal</item>
     </style>
 
-<<<<<<< HEAD
-    <style name="SelectSingleNote" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
-        <item name="android:background">@color/bg_highlighted</item>
-        <item name="android:textColor">@color/primary_dark</item>
-        <item name="colorAccent">@color/primary</item>
-        <item name="colorPrimaryDark">@color/bg_normal</item>
-        <item name="colorPrimary">@color/cardview_dark_background</item>
-        <item name="android:textColorPrimaryInverse">@color/primary</item>
-        <item name="android:colorBackground">@color/bg_normal</item>
-        <item name="android:windowBackground">@color/bg_normal</item>
-        <item name="android:textColorPrimary">@color/primary</item>
-=======
-    <style name="SelectSingleNote">
-        <item name="android:colorPrimary">@color/bg_highlighted</item>
-        <item name="colorPrimary">@color/bg_highlighted</item>
-        <item name="android:textColorPrimaryInverse">@color/primary</item>
-        <item name="android:textColorPrimary">@color/primary</item>
+    <style name="SelectSingleNoteTheme" parent="@android:style/Theme.Holo.Light">
+        <item name="android:actionBarStyle">@style/SSNActionBarTheme</item>
+    </style>
 
->>>>>>> 7951365... .
+    <style name="SSNActionBarTheme" parent="@android:style/Widget.Holo.Light.ActionBar">
+        <item name="android:background">#000000</item>
     </style>
 
     <!--
