--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -2,19 +2,17 @@
 <resources>
 
     <style name="SelectSingleNote" parent="Theme.AppCompat.Light.DarkActionBar">
-<<<<<<< HEAD
         <item name="android:background">@color/bg_highlighted</item>
         <item name="android:textColor">@color/primary_dark</item>
         <item name="colorAccent">@color/primary</item>
         <item name="colorPrimaryDark">@color/bg_normal</item>
-        <item name="colorPrimary">@color/cardview_dark_background</item>
-        <item name="android:textColorPrimaryInverse">@color/primary</item>
         <item name="android:colorBackground">@color/bg_normal</item>
         <item name="android:windowBackground">@color/bg_normal</item>
-        <item name="android:textColorPrimary">@color/primary</item>
         <item name="android:statusBarColor">@color/primary_dark</item>
-=======
         <item name="android:windowTitleBackgroundStyle">@color/fg_default_high</item>
->>>>>>> 7951365... .
+        <item name="colorPrimary">@color/bg_highlighted</item>
+        <item name="android:textColorPrimaryInverse">@color/primary</item>
+        <item name="android:navigationBarColor">@color/primary</item>
+        <item name="android:textColorPrimary">@color/primary</item>
     </style>
 </resources>
