First working version of Single Note Widget

--- a/app/src/main/res/layout/widget_single_note.xml
+++ b/app/src/main/res/layout/widget_single_note.xml
@@ -21,6 +21,9 @@
         android:layout_marginBottom="6dp"
          />
 </RelativeLayout>
+
 <!--
+    TODO: Markdown support
+
  <com.yydcdut.rxmarkdown.RxMDTextView
 -->
