--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,10 +13,10 @@
         <item name="android:windowTitleBackgroundStyle">@color/bg_normal</item>
     </style>
 
-    <style name="SelectSingleNoteTheme" parent="@android:style/Theme.Holo.Light">
+    <!-- TODO Theme for Single Note Widget selection activity -->
+    <style name="SelectSingleNoteTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="android:actionBarStyle">@style/SSNActionBarTheme</item>
     </style>
-
     <style name="SSNActionBarTheme" parent="@android:style/Widget.Holo.Light.ActionBar">
         <item name="android:background">#000000</item>
         <item name="android:textColor">@color/primary</item>
