--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,25 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="SelectSingleNote" parent="Theme.AppCompat.Light.DarkActionBar">
-<<<<<<< HEAD
-        <item name="android:background">@color/bg_highlighted</item>
-        <item name="android:textColor">@color/primary_dark</item>
-        <item name="colorAccent">@color/primary</item>
-        <item name="colorPrimaryDark">@color/bg_normal</item>
-        <item name="android:colorBackground">@color/bg_normal</item>
-        <item name="android:windowBackground">@color/bg_normal</item>
-        <item name="android:statusBarColor">@color/primary_dark</item>
-=======
->>>>>>> 420336611ae7e65e3628ea36616205a12be07e19
-        <item name="android:windowTitleBackgroundStyle">@color/fg_default_high</item>
-        <item name="colorPrimary">@color/bg_highlighted</item>
-        <item name="android:textColorPrimaryInverse">@color/primary</item>
-        <item name="android:navigationBarColor">@color/primary</item>
-        <item name="android:textColorPrimary">@color/primary</item>
-    </style>
-<<<<<<< HEAD
+        <!-- TODO Theme for Single Note Widget selection activity -->
+        <style name="SelectSingleNoteTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+                <item name="android:actionBarStyle">@style/SSNActionBarTheme</item>
+        </style>
+        <style name="SSNActionBarTheme" parent="@android:style/Widget.Holo.Light.ActionBar">
+                <item name="android:background">#000000</item>
+                <item name="android:textColor">@color/primary</item>
+        </style>
 </resources>
-=======
-</resources>
->>>>>>> 420336611ae7e65e3628ea36616205a12be07e19
