Set Single Note widget to 10% transparency. Various imports tidy up.

--- a/app/src/main/res/layout/widget_single_note.xml
+++ b/app/src/main/res/layout/widget_single_note.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/single_note"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/widget_single_note"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/widget_background"
-    android:padding="6dp"
-    android:clickable="true"
-    >
+    android:background="@color/widget_background"
+    android:padding="@dimen/widget_padding"
+    android:clickable="true">
 
     <TextView
         android:id="@+id/single_note_content"
@@ -15,11 +15,7 @@
         android:textColor="@color/fg_default"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="4dp"
-        android:layout_marginLeft="6dp"
-        android:layout_marginRight="6dp"
-        android:layout_marginBottom="6dp"
-         />
+        />
 </RelativeLayout>
 
 <!--
