--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,6 @@
     <color name="fg_default_low">#666666</color>
     <color name="fg_default_high">#cccccc</color>
     <color name="fg_contrast">#ffffff</color>
+
+    <color name="widget_background">#E6FFFFFF</color>
 </resources>
