--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,5 +9,6 @@
     <dimen name="button_padding">16dp</dimen>
     <dimen name="button_elevation">5dp</dimen>
 
-    <dimen name="widget_margin">0dp</dimen>
+    <dimen name="widget_margin">8dp</dimen>
+    <dimen name="widget_padding">8dp</dimen>
 </resources>
