--- a/app/src/main/res/layout/widget_create_note.xml
+++ b/app/src/main/res/layout/widget_create_note.xml
@@ -5,7 +5,7 @@
     android:layout_gravity="center_vertical"
     android:clickable="true"
     android:orientation="vertical"
-    android:padding="@dimen/widget_margin">
+    android:padding="@dimen/widget_create_note_padding">
 
     <ImageView
         android:id="@+id/ivCreateNoteBadge"
