--- a/app/src/main/res/layout/widget_single_note.xml
+++ b/app/src/main/res/layout/widget_single_note.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/widget_background"
-    android:padding="@dimen/widget_padding"
+    android:padding="@dimen/widget_single_note_padding"
     android:clickable="true">
 
     <TextView
@@ -20,5 +20,5 @@
 <!--
     TODO: Markdown support
 
- <com.yydcdut.rxmarkdown.RxMDTextView
+    <com.yydcdut.rxmarkdown.RxMDTextView
 -->
