--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,5 +10,6 @@
     <dimen name="button_elevation">5dp</dimen>
 
     <dimen name="widget_margin">8dp</dimen>
-    <dimen name="widget_padding">10dp</dimen>
+    <dimen name="widget_single_note_padding">10dp</dimen>
+    <dimen name="widget_create_note_padding">0dp</dimen>
 </resources>
