--- a/app/src/main/res/layout/widget_single_note.xml
+++ b/app/src/main/res/layout/widget_single_note.xml
@@ -1,24 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/widget_single_note"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/widget_background"
-    android:padding="@dimen/widget_single_note_padding"
-    android:clickable="true">
+    >
 
-    <TextView
-        android:id="@+id/single_note_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@color/fg_default"
+    <ListView
+        android:id="@+id/single_note_widget_lv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/widget_background"
+        android:padding="@dimen/widget_single_note_padding"
+        android:divider="@null"
         />
+
+    <TextView
+        android:id="@+id/widget_single_note_placeholder_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center"/>
 </RelativeLayout>
 
     <!--
         TODO: Markdown support
 
         <com.yydcdut.rxmarkdown.RxMDTextView
+
+
     -->
