--- a/app/src/main/res/xml/single_note_widget_provider_info.xml
+++ b/app/src/main/res/xml/single_note_widget_provider_info.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:configure="it.niedermann.owncloud.notes.android.activity.SelectSingleNoteActivity"
     android:initialLayout="@layout/widget_single_note"
+    android:configure="it.niedermann.owncloud.notes.android.activity.SelectSingleNoteActivity"
     android:minHeight="110dp"
     android:minWidth="180dp"
     android:minResizeHeight="80dp"
     android:minResizeWidth="80dp"
+    android:autoAdvanceViewId="@id/single_note_widget_lv"
     android:previewImage="@drawable/single_note_widget3"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="86400000"
+    android:updatePeriodMillis="0"
     android:widgetCategory="keyguard|home_screen" />
