--- a/app/src/main/res/menu/menu_note_list_view.xml
+++ b/app/src/main/res/menu/menu_note_list_view.xml
@@ -2,16 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/menu_favorite"
-        android:orderInCategory="50"
-        android:title="@string/menu_favorite"
-        android:checkable="true"
-        app:showAsAction="ifRoom" />
-    <item
         android:id="@+id/menu_preview"
         android:icon="@drawable/ic_eye_white_24dp"
-        android:orderInCategory="80"
+        android:orderInCategory="50"
         android:title="@string/menu_preview"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/menu_edit"
+        android:icon="@drawable/ic_action_edit_24dp"
+        android:orderInCategory="50"
+        android:title="@string/menu_edit"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/menu_favorite"
+        android:orderInCategory="80"
+        android:title="@string/menu_favorite"
+        android:checkable="true"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/menu_category"
