--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="noteMode_values">
-        <item>edit</item>
-        <item>preview</item>
-        <item>last</item>
+        <item>@string/pref_value_mode_edit</item>
+        <item>@string/pref_value_mode_preview</item>
+        <item>@string/pref_value_mode_last</item>
     </string-array>
 </resources>
