#204 Quickwin for category label

--- a/app/src/main/res/layout/fragment_notes_list_note_item.xml
+++ b/app/src/main/res/layout/fragment_notes_list_note_item.xml
@@ -49,6 +49,11 @@
         <TextView
             android:id="@+id/noteCategory"
             android:layout_width="wrap_content"
+            android:background="@drawable/border"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
@@ -71,6 +76,8 @@
             android:layout_marginLeft="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp"
             android:ellipsize="end"
             android:maxLines="1"
             android:textColor="@drawable/list_item_color_selector_low"
