--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -8,11 +8,11 @@
     tools:context="it.niedermann.owncloud.notes.android.activity.EditNoteActivity">
 
     <com.yydcdut.rxmarkdown.RxMDEditText
-        android:id="@+id/editContent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textMultiLine|textCapSentences"
-        android:padding="16dp" />
-
+            android:id="@+id/editContent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textMultiLine|textCapSentences"
+            android:padding="16dp"
+            android:textColor="@color/fg_default"/>
 </ScrollView>
