--- a/app/src/main/res/layout/activity_single_note.xml
+++ b/app/src/main/res/layout/activity_single_note.xml
@@ -14,6 +14,7 @@
         android:padding="16dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/fg_default"
+        android:background="@color/bg_normal"
         android:textIsSelectable="true" />
 
 </ScrollView>
