--- a/app/src/main/res/layout/dialog_change_category.xml
+++ b/app/src/main/res/layout/dialog_change_category.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="?dialogPreferredPadding"
-    >
+			  android:layout_width="match_parent"
+			  android:layout_height="match_parent"
+			  android:orientation="vertical"
+			  android:padding="?dialogPreferredPadding"
+	>
 
-    <EditText
-        android:id="@+id/editCategory"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        />
+	<it.niedermann.owncloud.notes.android.AlwaysAutoCompleteTextView
+		android:id="@+id/editCategory"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:completionThreshold="1"
+		android:inputType="text"
+		/>
 
 </LinearLayout>
