--- a/app/src/main/res/layout/widget_entry.xml
+++ b/app/src/main/res/layout/widget_entry.xml
@@ -4,29 +4,34 @@
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:orientation="horizontal"
-    android:padding="4dp">
+    android:padding="@dimen/widget_note_list_padding">
 
     <TextView
         android:id="@+id/widget_entry_content_tv"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:paddingLeft="6dp"
+        android:paddingStart="@dimen/widget_note_list_outer_padding"
+        android:paddingEnd="@dimen/widget_note_list_inner_padding"
+        android:paddingLeft="@dimen/widget_note_list_outer_padding"
+        android:paddingRight="@dimen/widget_note_list_inner_padding"
         android:layout_gravity="center_vertical"
         android:gravity="center_vertical"
         android:layout_weight="1"
         android:textColor="@color/fg_default"
         android:lines="1"
-        android:ellipsize="end"
-        />
+        android:ellipsize="end" />
 
     <ImageView
         android:id="@+id/widget_entry_fav_icon"
-        android:layout_width="26dp"
-        android:layout_height="20dp"
+        android:layout_width="@dimen/widget_note_list_fav_icon_width"
+        android:layout_height="@dimen/widget_note_list_fav_icon_height"
         android:layout_gravity="center_vertical"
         android:foregroundGravity="center_vertical"
-        android:paddingRight="6dp"
+        android:paddingStart="@dimen/widget_note_list_inner_padding"
+        android:paddingEnd="@dimen/widget_note_list_outer_padding"
+        android:paddingLeft="@dimen/widget_note_list_inner_padding"
+        android:paddingRight="@dimen/widget_note_list_outer_padding"
         android:src="@drawable/ic_star_grey600_24dp"
-        />
+        android:contentDescription="@string/widget_entry_fav_contentDescription" />
 
 </LinearLayout>
