--- a/app/src/main/res/layout/widget_note_list.xml
+++ b/app/src/main/res/layout/widget_note_list.xml
@@ -2,23 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/widget_background">
 
     <!-- Widget header -->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="36dp"
+        android:layout_height="@dimen/widget_note_list_header_height"
         android:background="@color/primary"
-        android:padding="2dp">
+        android:padding="@dimen/widget_note_list_hdr_padding">
 
         <ImageView
             android:id="@+id/widget_note_header_icon"
-            android:layout_width="30dp"
+            android:layout_width="@dimen/widget_note_list_icon_width"
             android:layout_height="match_parent"
             android:src="@drawable/ic_launcher"
             android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
-            android:paddingLeft="6dp"/>
+            android:paddingStart="@dimen/widget_note_list_outer_padding"
+            android:paddingEnd="@dimen/widget_note_list_inner_padding"
+            android:paddingLeft="@dimen/widget_note_list_outer_padding"
+            android:paddingRight="@dimen/widget_note_list_inner_padding"
+            android:contentDescription="@string/widget_app_launcher_contentDescription" />
 
         <TextView
             android:id="@+id/widget_note_list_title"
@@ -29,17 +35,25 @@
             android:textStyle="bold"
             android:textSize="18sp"
             android:layout_toRightOf="@id/widget_note_header_icon"
+            android:layout_toEndOf="@id/widget_note_header_icon"
             android:gravity="center_vertical"
-            android:paddingLeft="6dp"
-            />
+            android:paddingStart="@dimen/widget_note_list_outer_padding"
+            android:paddingEnd="@dimen/widget_note_list_inner_padding"
+            android:paddingLeft="@dimen/widget_note_list_outer_padding"
+            android:paddingRight="@dimen/widget_note_list_inner_padding" />
 
         <ImageView
             android:id="@+id/widget_note_list_create_icon"
-            android:layout_width="30dp"
+            android:layout_width="@dimen/widget_note_list_icon_width"
             android:layout_height="match_parent"
             android:src="@drawable/ic_action_new"
             android:layout_alignParentRight="true"
-            android:paddingRight="6dp"/>
+            android:layout_alignParentEnd="true"
+            android:paddingStart="@dimen/widget_note_list_inner_padding"
+            android:paddingEnd="@dimen/widget_note_list_outer_padding"
+            android:paddingLeft="@dimen/widget_note_list_inner_padding"
+            android:paddingRight="@dimen/widget_note_list_outer_padding"
+            android:contentDescription="@string/widget_create_note" />
 
     </RelativeLayout>
     <!-- End header -->
@@ -48,8 +62,15 @@
         android:id="@+id/note_list_widget_lv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/widget_background"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/fg_default" />
+
+    <TextView
+        android:id="@+id/widget_note_list_placeholder_tv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="@string/widget_note_list_placeholder"
+        android:textColor="@color/fg_default_high" />
 
 </LinearLayout>
