--- a/app/src/main/res/layout/widget_single_note.xml
+++ b/app/src/main/res/layout/widget_single_note.xml
@@ -3,21 +3,27 @@
     android:id="@+id/widget_single_note"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/widget_background"
     >
 
     <ListView
         android:id="@+id/single_note_widget_lv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/widget_background"
         android:padding="@dimen/widget_single_note_padding"
         />
 
     <TextView
         android:id="@+id/widget_single_note_placeholder_tv"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:text="@string/widget_single_note_placeholder_tv"
+        android:textColor="@color/fg_default_high"
+        android:textAlignment="center"
+        android:padding="@dimen/widget_single_note_padding"
+        />
+
 </RelativeLayout>
     <!--
         TODO: Markdown support
